RESOLVED FIXED83708
Crash in CSSStyleSheet::deleteRule
https://bugs.webkit.org/show_bug.cgi?id=83708
Summary Crash in CSSStyleSheet::deleteRule
Antti Koivisto
Reported 2012-04-11 11:48:00 PDT
The wrapper needs to be null checked before calling setParentStyleSheet(0).
Attachments
patch (2.72 KB, patch)
2012-04-11 12:58 PDT, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2012-04-11 12:58:33 PDT
Andreas Kling
Comment 2 2012-04-11 12:59:45 PDT
Comment on attachment 136732 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=136732&action=review > Source/WebCore/ChangeLog:8 > + Andreas spotted that the wrapper needs to be null checked before calling setParentStyleSheet(0). Sounds like a clever guy!
Antti Koivisto
Comment 3 2012-04-11 13:04:12 PDT
Note You need to log in before you can comment on or make changes to this bug.