Crash in CSSStyleSheet::deleteRule https://bugs.webkit.org/show_bug.cgi?id=83708

Source/WebCore:

Reviewed by Andreas Kling.

Andreas spotted that the wrapper needs to be null checked before calling setParentStyleSheet(0).

Test: fast/css/delete-rule-crash.html

* css/CSSStyleSheet.cpp:
(WebCore::CSSStyleSheet::deleteRule):

LayoutTests:

Reviewed by Andreas Kling.

* fast/css/delete-rule-crash.html: Added.
* fast/css/delete-rule-crash-expected.txt: Added.



Canonical link: https://commits.webkit.org/101195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113898 268f45cc-cd09-0410-ab3c-d52691b4dbfc